# mr-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: command.rs  event.rs  main.rs  prelude.rs  utility.rs
src/command/: apply.rs  data.rs  embed.rs  help.rs  offer.rs  oracle.rs  ping.rs  poll.rs  quote.rs  role.rs
src/command/apply/: config.rs  form.rs
src/command/poll/: form.rs  input.rs  output.rs  reply.rs
src/include/: data.txt
src/include/apply/: about.txt  accept.txt  deny.txt  info.txt  resend.txt
src/include/help/: end.txt  start.txt
src/utility/: anchor.rs  custom_id.rs  formatting.rs  handler.rs  logger.rs  logging.rs  req.rs  request.rs  storage.rs  traits.rs
