[package]
name = "mr-manager"
description = "Open source guild management bot"
keywords = ["discord", "bot", "management"]
authors = ["Ethan Lynch"]

readme = "README.md"
license = "MIT"
repository = "https://github.com/Jaxydog/mr-manager/"

version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
colored = "2.0"
const_format = "0.2"
dotenvy = "0.15"
rand = "0.8"
rmp-serde = "1.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
default-features = false
features = ["builder", "cache", "chrono", "client", "gateway", "http", "model", "rustls_backend", "utils", "unstable_discord_api"]

[dependencies.tokio]
version = "1.22"
features = ["full"]